# ccgram

./: CHANGELOG.md  CLAUDE.md  Makefile  README.md
.claude/rules/: architecture.md
ccgram-pro/: .gitignore  README.md  pyproject.toml
ccgram-pro/src/ccgram_pro/: __init__.py  cli.py  config.py  doctor.py  extension.py  git_composer.py  git_composer_state.py  miniapp_factory.py  new_session.py  new_session_store.py  scenarios.py  session_teardown.py  settings_panel.py  state.py
ccgram-pro/src/ccgram_pro/git_ops/: __init__.py  _run.py  branch.py  commit.py  diff.py  pr.py  preflight.py  snapshot.py
ccgram-pro/src/ccgram_pro/handlers/: __init__.py  model_command.py  pr_fix_command.py  project_command.py
ccgram-pro/src/ccgram_pro/input_pipeline/: __init__.py  batcher.py  callbacks.py  file_batch.py  intercept.py  silencer_guard.py  voice_cleanup.py  voice_edit.py
ccgram-pro/src/ccgram_pro/output_pipeline/: __init__.py  interactive_clean.py  interactive_drive.py  interactive_input.py  interactive_plan.py  interactive_state.py  plan_summary.py  progress_bubble.py  silencer.py  summarizer.py  tldr.py  transcript_events.py
ccgram-pro/src/ccgram_pro/plan_mode/: __init__.py  approval_surface.py  mode_control.py  orchestrator.py
ccgram-pro/src/ccgram_pro/share/: __init__.py  csrf.py  links.py  store.py  tokens.py
ccgram-pro/src/ccgram_pro/web/: __init__.py  _page_shell.py  diff_render.py  routes_compose.py  routes_diff.py  routes_plan.py  routes_view.py  transcript_render.py
ccgram-pro/src/ccgram_pro/wizard/: __init__.py  env.py  prompts.py  run.py  steps.py
ccgram-pro/src/ccgram_pro/workspaces/: __init__.py  copy_strategy.py  gc.py  git_clone.py  install.py  manager.py  paths.py  runtime.py
ccgram-pro/tests/: conftest.py  test_config.py  test_csrf.py  test_doctor.py  test_extension.py  test_file_batch.py  test_git_composer.py  test_git_ops.py  test_git_ops_branch_sync.py  test_git_ops_commit.py  test_git_ops_preflight.py  test_git_ops_push.py  test_handler_groups.py  test_host_contract.py  test_input_batcher.py  test_input_callbacks.py  test_input_intercept.py  test_interactive_clean.py  test_interactive_drive.py  test_interactive_input.py  test_interactive_plan.py  test_interactive_state.py  test_new_session.py  test_new_session_start.py  test_new_session_store.py  test_plan_mode.py  test_plan_summary.py  test_progress_bubble.py  test_routes_compose.py  test_routes_diff.py  test_routes_plan.py  test_scenarios.py  test_session_teardown.py  test_settings_panel.py  test_share.py  test_silencer.py  test_state.py  test_summarizer.py  test_tldr.py  test_tokens_compose.py  (+8 more)
src/ccgram/: bootstrap.py  config.py  hook.py  main.py  session.py  session_map.py  session_monitor.py  session_resolver.py  tmux_manager.py  toolbar_config.py  transcript_reader.py  utils.py  window_query.py  window_state_store.py
src/ccgram/handlers/: callback_data.py  hook_events.py  registry.py
tests/ccgram/: test_bootstrap.py  test_handler_layering_invariants.py  test_utils.py  test_window_query.py  test_window_state_store.py  test_window_view.py
tests/integration/: test_state_roundtrip.py
(+24 files in other folders)
