[project]
name = "ccgram-pro"
version = "0.1.0"
description = "Workflow layer on top of ccgram — project picker, batched input, plan/execute mode, web diff viewer, PR review loop."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Evgenij Dolgov", email = "edolgov@outlook.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "ccgram",
    "click>=8.1.0",
    "structlog>=24.0.0",
    # PTB JobQueue powers the periodic workspace GC sweep. ccgram itself
    # does not pull this extra, so the layer asks for it explicitly.
    "python-telegram-bot[job-queue]>=21.0",
]

[project.scripts]
ccgram-pro = "ccgram_pro.cli:main"

[project.entry-points."ccgram.extensions"]
ccgram-pro = "ccgram_pro.extension:install"

[project.entry-points."ccgram.miniapp_factory"]
ccgram-pro = "ccgram_pro.miniapp_factory:make_factory"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccgram_pro"]

[tool.uv.sources]
ccgram = { path = "..", editable = true }

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ARG", "G", "BLE", "SIM", "PLR2004", "C901", "PLR0911", "PLR0912", "PLR0915", "N"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Tests: unused fixture args, magic values in assertions (matches ccgram's
# own ruff config so test style stays uniform across both packages).
"tests/**" = ["ARG", "PLR2004"]
# Unified-diff + transcript parsing are inherently branchy state machines —
# same exemption ccgram grants its own transcript_parser / response_builder.
"src/ccgram_pro/git_ops/diff.py" = ["C901", "PLR0912", "PLR0915", "PLR2004"]
"src/ccgram_pro/git_ops/branch.py" = ["PLR2004"]
"src/ccgram_pro/git_ops/snapshot.py" = ["N818"]  # SnapshotNotFound mirrors stdlib LookupError naming
# Domain exception names read better as NotFound/InvalidToken than
# *Error — same call as stdlib LookupError/KeyError.
"src/ccgram_pro/share/store.py" = ["N818"]
"src/ccgram_pro/share/tokens.py" = ["N818"]
"src/ccgram_pro/output_pipeline/transcript_events.py" = ["C901", "PLR0912"]
"src/ccgram_pro/output_pipeline/summarizer.py" = ["C901", "PLR0912"]
# Small, readable threshold constants inline in handlers.
"src/ccgram_pro/handlers/pr_fix_command.py" = ["PLR2004"]
"src/ccgram_pro/input_pipeline/callbacks.py" = ["PLR2004"]
"src/ccgram_pro/output_pipeline/progress_bubble.py" = ["PLR2004"]

[tool.pyright]
pythonVersion = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
